test/files/neg/case-collision.check
case-collision.scala:7: warning: Generated class foo.BIPPY differs only in case from foo.Bippy.
  Such classes will overwrite one another on case-insensitive filesystems.
class BIPPY
      ^
case-collision.scala:10: warning: Generated class foo.DINGO$ differs only in case from foo.Dingo$.
  Such classes will overwrite one another on case-insensitive filesystems.
object DINGO
       ^
case-collision.scala:10: warning: Generated class foo.DINGO differs only in case from foo.Dingo.
  Such classes will overwrite one another on case-insensitive filesystems.
object DINGO
       ^
case-collision.scala:13: warning: Generated class foo.HyRaX$ differs only in case from foo.Hyrax$.
  Such classes will overwrite one another on case-insensitive filesystems.
object HyRaX
       ^
case-collision.scala:13: warning: Generated class foo.HyRaX differs only in case from foo.Hyrax.
  Such classes will overwrite one another on case-insensitive filesystems.
object HyRaX
       ^
case-collision.scala:16: warning: Generated class foo.wackO differs only in case from foo.Wacko.
  Such classes will overwrite one another on case-insensitive filesystems.
object wackO
       ^
case-collision.scala:20: warning: Generated class foo.bar.Package differs only in case from foo.bar.package.
  Such classes will overwrite one another on case-insensitive filesystems.
  class Package
        ^
case-collision.scala:29: warning: Generated class foo.O$a_$bang$ differs only in case from foo.O$a_$bang$.
  Such classes will overwrite one another on case-insensitive filesystems.
    object bang {
           ^
error: No warnings can be incurred under -Werror.
8 warnings
1 error
